<resources>
    <string name="app_name">ScheduleAlarm</string>

    <string name="itemdefault">itemtest</string>
    <string name="timedefault">00:00</string>
    <string name="contentdefault">contentcontent</string>

    <string name="addformain">+添加日程</string>

    <string name="titlelabel">标题</string>
    <string name="contentlabel">日程内容</string>
    <string name="timelabel">选择提醒时间</string>
    <string name="confirmadd">确认添加</string>
    <string name="addtimedefault">日程插入时间为1900年1月1日</string>

    <string name="confirmupdate">更新</string>
    <string name="confirmdelete">删除</string>
    <string name="back">返回</string>
</resources>
