<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp">

    <LinearLayout
        android:id="@+id/show_uplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/show_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/itemdefault"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/show_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/timedefault"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/show_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contentdefault"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/show_uplayout" />

</android.support.constraint.ConstraintLayout>