<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/uply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titlelayout">
    <TextView
        android:id="@+id/showaddtime"
        android:layout_margin="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/addtimedefault"
        android:gravity="center" />
    <Button
        android:id="@+id/goback"
        android:layout_margin="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/titlelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        app:layout_constraintTop_toBottomOf="@id/uply"
        >
        <TextView
            android:id="@+id/addLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titlelabel"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/titleadd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="3"
            android:inputType="text"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/contentlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/titlelayout"
        app:layout_constraintBottom_toTopOf="@id/timelabel">
        <TextView
            android:id="@+id/contentLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentlabel"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/contentadd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="3"
            android:background="@drawable/textborder"
            android:lines="8"
            android:gravity="top"
            android:inputType="textMultiLine"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/timelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timelabel"
        app:layout_constraintTop_toBottomOf="@id/contentlayout"
        app:layout_constraintBottom_toTopOf="@id/timepicker"
        android:textSize="15dp"
        android:gravity="center"/>
    <TimePicker
        android:id="@+id/timepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contentlayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20sp"
        android:timePickerMode="spinner"/>
    <Button
        android:id="@+id/confirmadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/confirmadd"
        android:layout_marginBottom="20sp"/>
</android.support.constraint.ConstraintLayout>