<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/goback"
        android:layout_margin="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleupdatelayout"/>
    <LinearLayout
        android:id="@+id/titleupdatelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        app:layout_constraintTop_toBottomOf="@id/goback"
        >
        <TextView
            android:id="@+id/updateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titlelabel"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/titleupdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="3"
            android:inputType="text"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/contentupdatelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/titleupdatelayout"
        app:layout_constraintBottom_toTopOf="@id/timeupdatelabel">
        <TextView
            android:id="@+id/contentupdateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentlabel"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/contentupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="3"
            android:background="@drawable/textborder"
            android:lines="8"
            android:gravity="top"
            android:inputType="textMultiLine"/>
    </LinearLayout>
    <TextView
        android:id="@+id/timeupdatelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timelabel"
        app:layout_constraintTop_toBottomOf="@id/contentupdatelayout"
        app:layout_constraintBottom_toTopOf="@id/timeupdatepicker"
        android:textSize="15dp"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"/>
    <TimePicker
        android:id="@+id/timeupdatepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/timeupdatelabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20sp"
        android:timePickerMode="spinner"/>
    <Button
        android:id="@+id/confirmupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/confirmdelete"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/confirmupdate"
        android:layout_marginBottom="20sp"/>
    <Button
        android:id="@+id/confirmdelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/confirmupdate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/confirmdelete"
        android:layout_marginBottom="20sp"/>
</android.support.constraint.ConstraintLayout>